--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/UnpaidTollVehicle.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/UnpaidTollVehicle.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.TrafficControlOfficer.UnpaidTollVehicleFXMLControler">
    <children>
       <ComboBox fx:id="vehicleTypeCB" layoutX="130.0" layoutY="54.0" prefHeight="26.0" prefWidth="170.0" promptText="Vehicle Type" />
@@ -21,7 +20,7 @@
       <Label layoutX="7.0" layoutY="124.0" text="Date:" />
       <Label layoutX="7.0" layoutY="159.0" text="Toll amount:" />
       <TextField fx:id="tollAmountTF" layoutX="131.0" layoutY="155.0" prefHeight="26.0" prefWidth="170.0" promptText="XXXX.XX Taka" />
-      <TableView layoutX="15.0" layoutY="227.0" prefHeight="158.0" prefWidth="350.0">
+      <TableView fx:id="UnpaidtollTV" layoutX="15.0" layoutY="227.0" prefHeight="158.0" prefWidth="350.0">
         <columns>
           <TableColumn fx:id="vehicleTypeCol" prefWidth="87.20001220703125" text="Vehicle Type" />
           <TableColumn fx:id="regNoCol" prefWidth="110.4000244140625" text="Reg NO" />
@@ -35,5 +34,6 @@
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Label>
+      <Label fx:id="massagelabe" layoutX="342.0" layoutY="91.0" prefHeight="82.0" prefWidth="250.0" textFill="RED" />
    </children>
 </AnchorPane>
