--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/updateViolationRecord.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/updateViolationRecord.fxml
@@ -51,7 +51,13 @@
             <TableColumn fx:id="paidinfoCol" prefWidth="64.79998779296875" text="Info" />
         </columns>
       </TableView>
-      <Line endX="499.0" layoutX="101.0" layoutY="279.0" startX="-100.0" />
-      <Line endX="86.20001220703125" endY="28.5" layoutX="225.0" layoutY="251.0" startX="86.20001220703125" startY="-249.39999389648438" />
+      <Line endX="499.0" layoutX="101.0" layoutY="291.0" startX="-100.0" />
+      <Line endX="86.20001220703125" endY="28.5" layoutX="225.0" layoutY="251.0" startX="86.20001220703125" startY="-201.39999389648438" />
+      <Label layoutX="222.0" layoutY="7.0" text="Violation Update ">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="255.0" prefHeight="26.0" prefWidth="282.0" textFill="RED" />
    </children>
 </AnchorPane>
