--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/UnpaidTollVehicle.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/UnpaidTollVehicle.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.TrafficControlOfficer.UnpaidTollVehicleFXMLControler">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.UnpaidTollVehicleFXMLController">
    <children>
       <ComboBox fx:id="vehicleTypeCB" layoutX="130.0" layoutY="54.0" prefHeight="26.0" prefWidth="170.0" promptText="Vehicle Type" />
       <Label layoutX="7.0" layoutY="58.0" text="Type:" />
