--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/updateViolationRecord.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/updateViolationRecord.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="498.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.TrafficControlOfficer.UpdateTollviolationRecord">
+<AnchorPane prefHeight="498.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.UpdateTollviolationRecordFXMLController">
    <children>
       <Label layoutX="14.0" layoutY="62.0" text="Type:" />
       <Label layoutX="14.0" layoutY="98.0" text="Registration No:" />
