--- a/src/main/resources/cse_213/final_project/Mehrab/Dashboard_Mehrab.fxml
+++ b/src/main/resources/cse_213/final_project/Mehrab/Dashboard_Mehrab.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Mehrab.DashboardMehrab"
-            prefHeight="400.0" prefWidth="600.0" >
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Mehrab.DashboardMehrab">
+   <children>
+      <TextField layoutX="92.0" layoutY="52.0" />
+      <TextField layoutX="300.0" layoutY="52.0" />
+      <Button layoutX="133.0" layoutY="106.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="332.0" layoutY="119.0" mnemonicParsing="false" text="Button" />
+   </children>
 </AnchorPane>
