Some design in Log FXML

--- a/src/main/resources/cse_213/final_project/login.fxml
+++ b/src/main/resources/cse_213/final_project/login.fxml
@@ -6,19 +6,36 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.LoginFXMLController">
    <children>
-      <Label layoutX="273.0" layoutY="83.0" text="Log In">
+      <Label id="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" layoutX="273.0" layoutY="83.0" text="Log In">
          <font>
             <Font name="Georgia" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="178.0" layoutY="153.0" text="User ID:" />
-      <Label layoutX="177.0" layoutY="186.0" text="Password:" />
+      <Label id="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" layoutX="178.0" layoutY="153.0" text="User ID:" />
+      <Label id="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" layoutX="177.0" layoutY="186.0" text="Password:" />
       <TextField fx:id="userIDtf" layoutX="234.0" layoutY="149.0" promptText="User ID" />
       <PasswordField fx:id="passwordTF" layoutX="234.0" layoutY="182.0" promptText="Password" />
-      <Button layoutX="309.0" layoutY="221.0" mnemonicParsing="false" onAction="#loginOA" prefHeight="26.0" prefWidth="72.0" text="Log In" />
+      <Button layoutX="292.0" layoutY="216.0" mnemonicParsing="false" onAction="#loginOA" prefHeight="26.0" prefWidth="92.0" text="Log In" />
       <Label fx:id="errormassageLabel" layoutX="409.0" layoutY="150.0" prefHeight="56.0" prefWidth="191.0" textAlignment="CENTER" textFill="RED" wrapText="true" />
+      <Label prefHeight="73.0" prefWidth="623.0" style="-fx-background-color: #1877F2;" />
+      <Text fill="WHITE" layoutX="124.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dropshadow(gaussian, rgba(0, 0, 0, 0.5), 15, 0.0, 5, 5)" text="Padma Bridge Toll Management System" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="21.0" />
+         </font>
+      </Text>
+      <Text layoutX="443.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new employee...">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <Button layoutX="566.0" layoutY="350.0" mnemonicParsing="false" onAction="#addEmployeeOA" style="-fx-background-color: transparent;" text="Add" textFill="#0053ff" underline="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
