--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/UnpaidTollVehicle.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/UnpaidTollVehicle.fxml
@@ -34,6 +34,6 @@
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="massagelabe" layoutX="342.0" layoutY="91.0" prefHeight="82.0" prefWidth="250.0" textFill="RED" />
+      <Label fx:id="massagelabe" layoutX="310.0" layoutY="92.0" prefHeight="82.0" prefWidth="185.0" textAlignment="CENTER" textFill="RED" wrapText="true" />
    </children>
 </AnchorPane>
