--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/ManageExemption.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/ManageExemption.fxml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.ManageExemptionController">
    <children>
-      <Label layoutX="19.0" layoutY="80.0" text="Vehicle Type:" />
-      <Label layoutX="19.0" layoutY="110.0" text="Driving Licence No:" />
-      <Label layoutX="19.0" layoutY="142.0" text="Vechicle Reg No:" />
-      <Label layoutX="20.0" layoutY="174.0" text="Exemotion Reason:" />
-      <DatePicker layoutX="130.0" layoutY="202.0" prefHeight="26.0" prefWidth="150.0" promptText="Travel Date" />
-      <Label layoutX="20.0" layoutY="206.0" text="Date:" />
-      <RadioButton layoutX="95.0" layoutY="82.0" mnemonicParsing="false" text="Govt Car" />
-      <RadioButton layoutX="167.0" layoutY="82.0" mnemonicParsing="false" text="VIP" />
-      <RadioButton layoutX="212.0" layoutY="82.0" mnemonicParsing="false" text="Ambulance" />
-      <RadioButton layoutX="300.0" layoutY="82.0" mnemonicParsing="false" text="Fire Service" />
-      <TextField layoutX="130.0" layoutY="106.0" promptText="Driving Licence" />
-      <TextField layoutX="129.0" layoutY="138.0" promptText="Registration No" />
-      <TextField layoutX="130.0" layoutY="170.0" promptText="Reason of exemotion" />
-      <RadioButton layoutX="385.0" layoutY="82.0" mnemonicParsing="false" text="Govt. Officer" />
+      <Label layoutX="19.0" layoutY="109.0" text="Vehicle Type:" />
+      <Label layoutX="19.0" layoutY="139.0" text="Driving Licence No:" />
+      <Label layoutX="19.0" layoutY="171.0" text="Vechicle Reg No:" />
+      <Label layoutX="20.0" layoutY="203.0" text="Exemotion Reason:" />
+      <DatePicker fx:id="manageExemptionTravelDP" layoutX="130.0" layoutY="231.0" prefHeight="26.0" prefWidth="150.0" promptText="Travel Date" />
+      <Label layoutX="20.0" layoutY="235.0" text="Date:" />
+      <RadioButton layoutX="95.0" layoutY="111.0" mnemonicParsing="false" text="Govt Car" />
+      <RadioButton layoutX="167.0" layoutY="111.0" mnemonicParsing="false" text="VIP" />
+      <RadioButton layoutX="212.0" layoutY="111.0" mnemonicParsing="false" text="Ambulance" />
+      <RadioButton layoutX="300.0" layoutY="111.0" mnemonicParsing="false" text="Fire Service" />
+      <TextField fx:id="manageExemptionDrivingLicenceTF" layoutX="130.0" layoutY="135.0" promptText="Driving Licence" />
+      <TextField fx:id="manageExemptionVehiRegNoTF" layoutX="129.0" layoutY="167.0" promptText="Registration No" />
+      <TextField fx:id="manageExemptionReasonTF" layoutX="130.0" layoutY="199.0" promptText="Reason of exemotion" />
+      <RadioButton layoutX="385.0" layoutY="111.0" mnemonicParsing="false" text="Govt. Officer" />
+      <Label fx:id="regNoValidationmassagelabelManageEXMP" layoutX="286.0" layoutY="169.0" prefHeight="18.0" prefWidth="198.0" />
+      <Label fx:id="errorlabelmanageExemption" layoutX="130.0" layoutY="306.0" prefHeight="26.0" prefWidth="198.0" />
+      <Button layoutX="128.0" layoutY="268.0" mnemonicParsing="false" onAction="#ExemptionOA" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #1877F2;" text="Exemption" textFill="WHITE" />
+      <Label layoutX="161.0" layoutY="62.0" text="Manage Exemption">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
