--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/dashboard.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/dashboard.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Shahriar.contollers.Dashboard"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.Dashboard">
+   <children>
+      <Label fx:id="vehicleOwnerfxid" layoutX="47.0" layoutY="38.0" text="vehicles Owner" />
+      <Button layoutX="47.0" layoutY="62.0" mnemonicParsing="false" onAction="#ScheduleMaintenanceOnaction" text="Schedule Maintenance   " />
+      <Button layoutX="47.0" layoutY="97.0" mnemonicParsing="false" onAction="#CarCleaningOnAction" text="Car Cleaning Reminder " />
+      <Button layoutX="47.0" layoutY="133.0" mnemonicParsing="false" onAction="#SafeDrivingOnaction" text="Safe Driving Score " />
+      <Button layoutX="47.0" layoutY="175.0" mnemonicParsing="false" onAction="#FuelTrackingOnaction" text="Fuel Tracking  " />
+      <Button layoutX="47.0" layoutY="216.0" mnemonicParsing="false" onAction="#DocumentRenewalReminderOnaction" text="Document Renewal Reminder " />
+      <Button layoutX="47.0" layoutY="252.0" mnemonicParsing="false" onAction="#tirepressurecheckOnaction" text=" Tire Pressure Check     " />
+      <Button layoutX="47.0" layoutY="287.0" mnemonicParsing="false" onAction="#EmergengykitchecklistOnaction" text="Emergency Kit Checklist  " />
+      <Button layoutX="47.0" layoutY="320.0" mnemonicParsing="false" onAction="#TripSummeryOnaction" text="Trip Summary  " />
+      <Button layoutX="47.0" layoutY="352.0" mnemonicParsing="false" onAction="#logoutOnaction" text="Logout" />
+   </children>
 </AnchorPane>
