--- a/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/Dashboard_tollplazaAdminastrator.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/Dashboard_tollplazaAdminastrator.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.DashboardShahriar">
    <children>
       <Label fx:id="tollPlazaAdminstratorfxid" layoutX="45.0" layoutY="33.0" prefHeight="18.0" prefWidth="163.0" text="tollplazaAdminastor" />
@@ -16,5 +15,7 @@
       <Button layoutX="45.0" layoutY="242.0" mnemonicParsing="false" onDragDetected="#VehiclesStatisticsOnaction" text=" Vehicle Statistics  " />
       <Button layoutX="45.0" layoutY="282.0" mnemonicParsing="false" onAction="#maintenanceSecheduleOnaction" text="Maintenance Schedule  " />
       <Button layoutX="45.0" layoutY="318.0" mnemonicParsing="false" onAction="#ShiftScheduleManagementOnaction" text="Shift Schedule Management " />
+      <Button mnemonicParsing="false" text="Button" />
+      <Button layoutX="73.0" layoutY="354.0" mnemonicParsing="false" onAction="#logoutonaction" text="logout" />
    </children>
 </AnchorPane>
