--- a/src/main/resources/cse_213/final_project/Fima/tollcollector.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/tollcollector.fxml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Tollcollector">
+<AnchorPane prefHeight="534.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Tollcollector">
    <children>
-      <TextField fx:id="regnumtextfield" layoutX="52.0" layoutY="60.0" text="reg num" />
-      <TextField fx:id="nametextfield" layoutX="225.0" layoutY="73.0" />
-      <Button layoutX="89.0" layoutY="133.0" mnemonicParsing="false" onAction="#addOnAction" text="Button" />
+      <ComboBox layoutX="14.0" layoutY="24.0" prefWidth="150.0" promptText="vehicle Type" />
+      <DatePicker layoutX="14.0" layoutY="69.0" promptText="Date" />
+      <TextField layoutX="14.0" layoutY="111.0" promptText="Reg Num" />
+      <TextField layoutX="206.0" layoutY="24.0" promptText="Amount" />
+      <Button layoutX="199.0" layoutY="108.0" mnemonicParsing="false" text="Generate" />
+      <Button layoutX="525.0" layoutY="470.0" mnemonicParsing="false" text="Retry" />
+      <Button layoutX="367.0" layoutY="470.0" mnemonicParsing="false" text="Patment" />
+      <TableView layoutX="32.0" layoutY="258.0" prefHeight="200.0" prefWidth="303.0">
+        <columns>
+          <TableColumn prefWidth="91.20001602172852" text="vehicle Type" />
+          <TableColumn prefWidth="76.79998779296875" text="Reg Num" />
+            <TableColumn prefWidth="58.40000915527344" text="Date" />
+            <TableColumn prefWidth="75.0" text="Amount" />
+        </columns>
+      </TableView>
+      <Label layoutX="442.0" layoutY="121.0" prefHeight="63.0" prefWidth="82.0" style="-fx-border-color: red;" text="Error" textAlignment="CENTER" />
    </children>
 </AnchorPane>
