--- a/src/main/resources/cse_213/final_project/Fima/TollBoothOperatorDashboard.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/TollBoothOperatorDashboard.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.DashboardFima"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="542.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.DashboardFima">
+   <children>
+      <Label fx:id="TollBoothOperatorDashboardlable" layoutX="159.0" layoutY="30.0" text="Toll Booth Operator Dashboard" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Label>
+      <Button layoutX="46.0" layoutY="84.0" mnemonicParsing="false" onAction="#collecttollpaymentsonactionbutton" prefHeight="36.0" prefWidth="158.0" text=" Collect Toll Payments" />
+      <Button layoutX="46.0" layoutY="133.0" mnemonicParsing="false" onAction="#vehicleinformationOnActionButton" prefHeight="36.0" prefWidth="158.0" text=" Vehicle Information" />
+      <Button layoutX="49.0" layoutY="350.0" mnemonicParsing="false" onAction="#shiftattendanceonactionbutton" prefHeight="45.0" prefWidth="158.0" text=" Shift Attendance" />
+      <Button layoutX="49.0" layoutY="248.0" mnemonicParsing="false" onAction="#vipemergencyvehiclesonactionbutton" prefHeight="46.0" prefWidth="158.0" text=" VIP &amp; Emergency Vehicles" />
+      <Button layoutX="49.0" layoutY="184.0" mnemonicParsing="false" onAction="#informationandsupportonactionbutton" prefHeight="46.0" prefWidth="158.0" text=" Information and Support" />
+      <Button layoutX="49.0" layoutY="481.0" mnemonicParsing="false" onAction="#logoutonactionbutton" prefHeight="36.0" prefWidth="158.0" text="Log Out" />
+      <Button layoutX="49.0" layoutY="303.0" mnemonicParsing="false" onAction="#technicalissuesonactionbutton" prefHeight="36.0" prefWidth="158.0" text="Technical Issues" />
+      <Button layoutX="49.0" layoutY="415.0" mnemonicParsing="false" onAction="#profileinformationonactionbutton" prefHeight="46.0" prefWidth="158.0" text=" Profile Information" />
+   </children>
 </AnchorPane>
