--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/Dashboard_PA.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/Dashboard_PA.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Tawhid.PoliceAuthurity.Dashboard"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <left>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox layoutX="22.0" layoutY="53.0" prefHeight="294.0" prefWidth="156.0">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Dashboard">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="36.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="63.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="89.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="116.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="142.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="168.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="195.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+               </children>
+            </VBox>
+         </children>
+      </AnchorPane>
+   </left>
+</BorderPane>
