--- a/src/main/resources/cse_213/final_project/Fima/Information_Support.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/Information_Support.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.InformationSupport"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="501.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.InformationSupport">
+   <children>
+      <Label layoutX="220.0" layoutY="14.0" text="Information and Support">
+         <font>
+            <Font name="System Bold" size="23.0" />
+         </font>
+      </Label>
+      <ComboBox layoutX="130.0" layoutY="62.0" prefWidth="150.0" />
+      <Label layoutX="40.0" layoutY="66.0" text="Vehicle Type" />
+      <Label layoutX="40.0" layoutY="112.0" text="Wheel" />
+      <Label layoutX="44.0" layoutY="148.0" text="Taka" />
+      <ComboBox layoutX="129.0" layoutY="99.0" prefWidth="150.0" />
+      <TextField layoutX="131.0" layoutY="144.0" />
+      <TextField layoutX="131.0" layoutY="187.0" />
+      <Label layoutX="45.0" layoutY="191.0" text="VAT" />
+      <Button layoutX="330.0" layoutY="117.0" mnemonicParsing="false" text="Button" />
+      <Label layoutX="327.0" layoutY="66.0" text="Total Amount" />
+      <TextField layoutX="416.0" layoutY="62.0" />
+      <Button layoutX="406.0" layoutY="117.0" mnemonicParsing="false" text="Button" />
+      <Label layoutX="524.0" layoutY="100.0" prefHeight="60.0" prefWidth="102.0" text="Error1" />
+      <Label layoutX="524.0" layoutY="166.0" text="error2" />
+      <Button layoutX="520.0" layoutY="251.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="73.0" text="Submit" />
+      <Button layoutX="613.0" layoutY="442.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Home" />
+   </children>
 </AnchorPane>
