--- a/src/main/resources/cse_213/final_project/Fima/ ShiftAttendance .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/ ShiftAttendance .fxml
@@ -10,30 +10,29 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="462.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.ShiftAttendance">
    <children>
-      <TextField layoutX="31.0" layoutY="25.0" promptText="ID" />
-      <TextField layoutX="31.0" layoutY="72.0" promptText="Operator Name" />
-      <ComboBox layoutX="30.0" layoutY="114.0" prefWidth="150.0" promptText="Toll Booth Number " />
-      <DatePicker layoutX="31.0" layoutY="163.0" promptText="Date" />
-      <RadioButton layoutX="376.0" layoutY="51.0" mnemonicParsing="false" text="Day" />
-      <RadioButton layoutX="435.0" layoutY="51.0" mnemonicParsing="false" text="Night" />
+      <TextField fx:id="IDTEXTFIELD" layoutX="31.0" layoutY="25.0" promptText="ID" />
+      <TextField fx:id="OPERATORNAMETEXTFIELD" layoutX="31.0" layoutY="72.0" promptText="Operator Name" />
+      <ComboBox fx:id="TOLLBOOTHOPERATORCOMBOBOX" layoutX="30.0" layoutY="114.0" prefWidth="150.0" promptText="Toll Booth Number " />
+      <DatePicker fx:id="DATEDATEPICKER" layoutX="31.0" layoutY="163.0" promptText="Date" />
+      <RadioButton fx:id="DAYRADIOBUTTON" layoutX="376.0" layoutY="51.0" mnemonicParsing="false" text="Day" />
+      <RadioButton fx:id="NIGHTRADIOBUTTON" layoutX="435.0" layoutY="51.0" mnemonicParsing="false" text="Night" />
       <Label layoutX="288.0" layoutY="51.0" text="Shift" />
-      <TextField layoutX="288.0" layoutY="85.0" promptText="Start Time" />
-      <TextField layoutX="288.0" layoutY="127.0" promptText="End Time" />
-      <TableView layoutX="39.0" layoutY="214.0" prefHeight="200.0" prefWidth="530.0">
+      <TextField fx:id="STARTTIMETEXTFIELD" layoutX="288.0" layoutY="85.0" promptText="Start Time" />
+      <TextField fx:id="ENDTIMETEXTFIELD" layoutX="288.0" layoutY="127.0" promptText="End Time" />
+      <TableView fx:id="SHOWDATATABLEVIEW" layoutX="39.0" layoutY="214.0" prefHeight="200.0" prefWidth="530.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="ID" />
-          <TableColumn prefWidth="75.0" text="Operator Name" />
-            <TableColumn prefWidth="75.0" text="Date" />
-            <TableColumn prefWidth="75.0" text="Shift" />
-            <TableColumn prefWidth="75.0" text="Toll Booth Number " />
-            <TableColumn prefWidth="75.0" text="Start Time" />
-            <TableColumn prefWidth="75.0" text="End Time" />
+          <TableColumn fx:id="IDTABLECOLUMN" prefWidth="41.60003662109375" text="ID" />
+          <TableColumn fx:id="OperatorNameTABLECOLUMN" prefWidth="97.5999755859375" text="Operator Name" />
+            <TableColumn fx:id="DateTABLECOLUMN" prefWidth="49.5999755859375" text="Date" />
+            <TableColumn fx:id="ShiftTABLECOLUMN" prefWidth="64.0" text="Shift" />
+            <TableColumn fx:id="TollBoothNumberTABLECOLUMN" prefWidth="125.5999755859375" text="Toll Booth Number " />
+            <TableColumn fx:id="StartTimeTABLECOLUMN" prefWidth="75.0" text="Start Time" />
+            <TableColumn fx:id="EndTimeTABLECOLUMN" prefWidth="75.0" text="End Time" />
         </columns>
       </TableView>
-      <Button layoutX="349.0" layoutY="176.0" mnemonicParsing="false" text="Submit" />
-      <Button layoutX="487.0" layoutY="422.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="72.0" text="Back" />
+      <Button layoutX="349.0" layoutY="176.0" mnemonicParsing="false" onAction="#SUBMITONACTIONBUTTON" text="Submit" />
+      <Button layoutX="487.0" layoutY="422.0" mnemonicParsing="false" onAction="#BACKONACTIONBUTTON" prefHeight="26.0" prefWidth="72.0" text="Back" />
    </children>
 </AnchorPane>
