--- a/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
@@ -10,39 +10,38 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="538.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.ProfileInformation">
    <children>
       <Label layoutX="24.0" layoutY="25.0" />
       <Label layoutX="24.0" layoutY="73.0" text="Name" />
-      <Label layoutX="22.0" layoutY="164.0" text="Date of Birth" />
-      <TextField layoutX="97.0" layoutY="69.0" />
+      <Label fx:id="DateofBirthDATEPICKER" layoutX="22.0" layoutY="164.0" text="Date of Birth" />
+      <TextField fx:id="NAMETEXTFIELD" layoutX="97.0" layoutY="69.0" />
       <Label layoutX="268.0" layoutY="16.0" text="Operator Information">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
       </Label>
       <Label layoutX="291.0" layoutY="125.0" text="Age" />
-      <TextField layoutX="386.0" layoutY="116.0" prefHeight="26.0" prefWidth="175.0" />
-      <Label layoutX="290.0" layoutY="77.0" text="Date of Joining" />
+      <TextField fx:id="AGETEXTFIELD" layoutX="386.0" layoutY="116.0" prefHeight="26.0" prefWidth="175.0" />
+      <Label fx:id="DateofJoiningDATEPICKER" layoutX="292.0" layoutY="77.0" text="Date of Joining" />
       <DatePicker layoutX="97.0" layoutY="160.0" />
       <DatePicker layoutX="386.0" layoutY="73.0" />
       <Label layoutX="293.0" layoutY="164.0" text="Gender" />
       <Label layoutX="20.0" layoutY="112.0" text="ID" />
-      <RadioButton layoutX="385.0" layoutY="164.0" mnemonicParsing="false" text="Male" />
-      <RadioButton layoutX="472.0" layoutY="164.0" mnemonicParsing="false" text="Female" />
-      <TextField layoutX="97.0" layoutY="108.0" />
-      <TableView layoutX="50.0" layoutY="243.0" prefHeight="200.0" prefWidth="682.0">
+      <RadioButton fx:id="MALERADIOBUTTON" layoutX="385.0" layoutY="164.0" mnemonicParsing="false" text="Male" />
+      <RadioButton fx:id="FemaleRADIOBUTTON" layoutX="472.0" layoutY="164.0" mnemonicParsing="false" text="Female" />
+      <TextField fx:id="IDTEXTFIELD" layoutX="97.0" layoutY="108.0" />
+      <TableView fx:id="SHOWDATATABLEVIEW" layoutX="50.0" layoutY="243.0" prefHeight="200.0" prefWidth="682.0">
         <columns>
-          <TableColumn prefWidth="108.00000381469727" text="Name" />
-          <TableColumn prefWidth="136.7999725341797" text="Date of Birth" />
-            <TableColumn prefWidth="107.199951171875" text="Age" />
-            <TableColumn prefWidth="112.00006103515625" text="Gender" />
-            <TableColumn prefWidth="69.5999755859375" text="ID" />
-            <TableColumn prefWidth="164.00006103515625" text="Date of Joining" />
+          <TableColumn fx:id="NameTABLECOLUMN" prefWidth="108.00000381469727" text="Name" />
+          <TableColumn fx:id="DateofBirthTABLECOLUMN" prefWidth="136.7999725341797" text="Date of Birth" />
+            <TableColumn fx:id="AGETABLECOLUMN" prefWidth="107.199951171875" text="Age" />
+            <TableColumn fx:id="GenderTABLECOLUMN" prefWidth="112.00006103515625" text="Gender" />
+            <TableColumn fx:id="IDTABLECOLUMN" prefWidth="69.5999755859375" text="ID" />
+            <TableColumn fx:id="DateofJoiningTABLECOLUMN" prefWidth="164.00006103515625" text="Date of Joining" />
         </columns>
       </TableView>
-      <Button layoutX="604.0" layoutY="186.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="96.0" text="Submit" />
-      <Button layoutX="608.0" layoutY="476.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="96.0" text="Home" />
+      <Button layoutX="604.0" layoutY="186.0" mnemonicParsing="false" onAction="#SUBMITONACTIONBUTTON" prefHeight="26.0" prefWidth="96.0" text="Submit" />
+      <Button layoutX="608.0" layoutY="476.0" mnemonicParsing="false" onAction="#HOMEONACTIONBUTTON" prefHeight="26.0" prefWidth="96.0" text="Home" />
    </children>
 </AnchorPane>
