--- a/src/main/resources/cse_213/final_project/Fima/Information_Support.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/Information_Support.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="501.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.InformationSupport">
+<AnchorPane prefHeight="501.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.InformationSupport">
    <children>
       <Label layoutX="220.0" layoutY="14.0" text="Information and Support">
          <font>
