--- a/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="538.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.ProfileInformation">
+<AnchorPane prefHeight="538.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.ProfileInformation">
    <children>
       <Label layoutX="24.0" layoutY="25.0" />
       <Label layoutX="24.0" layoutY="73.0" text="Name" />
