--- a/src/main/resources/cse_213/final_project/Fima/VipEmergencyVehicles.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/VipEmergencyVehicles.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="548.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.VipEmergencyVehicles">
+<AnchorPane prefHeight="548.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.VipEmergencyVehicles">
    <children>
       <Label fx:id="PriorityPassageLable" layoutX="44.0" layoutY="51.0" text="Priority Passage" />
       <RadioButton fx:id="yesradiobutton" layoutX="157.0" layoutY="51.0" mnemonicParsing="false" text="yes" />
