--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Interdepartmental_CommunicationL4 .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Interdepartmental_CommunicationL4 .fxml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.LiaisonOfficer.InterdepartmentalCommunicationL4"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="497.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.InterdepartmentalCommunicationL4">
+   <children>
+      <TableView layoutX="14.0" layoutY="95.0" prefHeight="107.0" prefWidth="386.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Message Title " />
+          <TableColumn prefWidth="75.0" text="Sender" />
+            <TableColumn prefWidth="75.0" text="Status" />
+        </columns>
+      </TableView>
+      <Button layoutX="323.0" layoutY="211.0" mnemonicParsing="false" text="Load Button" />
+      <TextArea layoutX="14.0" layoutY="294.0" prefHeight="75.0" prefWidth="212.0" promptText="Reply Massage" />
+      <TextField layoutX="76.0" layoutY="384.0" />
+      <Label layoutX="14.0" layoutY="388.0" text="Receiver" />
+      <Button layoutX="246.0" layoutY="318.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="101.0" text="Send" />
+      <Line endX="522.0" endY="-0.5" layoutX="106.0" layoutY="249.0" startX="-105.99999237060547" startY="-0.5" />
+   </children>
 </AnchorPane>
