--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/System_FailuresL3.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/System_FailuresL3.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="542.0" prefWidth="636.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.SystemFailures">
    <children>
@@ -28,7 +28,12 @@
             <TableColumn prefWidth="75.0" />
         </columns>
       </TableView>
-      <Button layoutX="318.0" layoutY="156.0" mnemonicParsing="false" text="Submit" />
-      <Button layoutX="441.0" layoutY="446.0" mnemonicParsing="false" text="Mark as Fixed" />
+      <Button layoutX="313.0" layoutY="413.0" mnemonicParsing="false" text="Submit" />
+      <Button layoutX="441.0" layoutY="446.0" mnemonicParsing="false" text="Home" />
+      <Label layoutX="290.0" layoutY="78.0" text="Device" />
+      <ComboBox layoutX="340.0" layoutY="74.0" prefWidth="150.0" />
+      <RadioButton layoutX="344.0" layoutY="128.0" mnemonicParsing="false" text="yes" />
+      <Label layoutX="294.0" layoutY="128.0" text="Priority" />
+      <RadioButton layoutX="412.0" layoutY="128.0" mnemonicParsing="false" text="no" />
    </children>
 </AnchorPane>
