--- a/src/main/resources/cse_213/final_project/Fima/TechnicalIssues.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/TechnicalIssues.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="538.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.TechnicalIssues">
+<AnchorPane prefHeight="538.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.TechnicalIssues">
    <children>
       <Label layoutX="53.0" layoutY="128.0" text="Technical Issues " />
       <TextField fx:id="TECHNICALissuetextfield" layoutX="166.0" layoutY="110.0" prefHeight="53.0" prefWidth="246.0" />
