--- a/src/main/resources/cse_213/final_project/Fima/tollcollector.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/tollcollector.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="534.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Tollcollector">
+<AnchorPane prefHeight="534.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.Tollcollector">
    <children>
       <ComboBox fx:id="vehicleTypecombobox" layoutX="14.0" layoutY="24.0" prefWidth="150.0" promptText="vehicle Type" />
       <DatePicker fx:id="datedatepicker" layoutX="14.0" layoutY="69.0" promptText="Date" />
