--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/Dashboard_PA.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/Dashboard_PA.fxml
@@ -6,29 +6,32 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <VBox layoutX="22.0" layoutY="53.0" prefHeight="294.0" prefWidth="156.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Dashboard">
+                  <Button mnemonicParsing="false" onAction="#DashboardOA" prefHeight="26.0" prefWidth="176.0" text="Dashboard">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-                  <Button layoutX="10.0" layoutY="36.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-                  <Button layoutX="10.0" layoutY="63.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-                  <Button layoutX="10.0" layoutY="89.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-                  <Button layoutX="10.0" layoutY="116.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-                  <Button layoutX="10.0" layoutY="142.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-                  <Button layoutX="10.0" layoutY="168.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
-                  <Button layoutX="10.0" layoutY="195.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Button" />
+                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#SecurityThreadOA" prefHeight="26.0" prefWidth="176.0" text="Handle Security Threads" />
+                  <Button layoutX="10.0" layoutY="36.0" mnemonicParsing="false" onAction="#CheckVehicleOA" prefHeight="26.0" prefWidth="176.0" text="Check Vehicles" />
+                  <Button layoutX="10.0" layoutY="63.0" mnemonicParsing="false" onAction="#resolveDepositeOA" prefHeight="26.0" prefWidth="176.0" text="Resolve Deposite" />
+                  <Button layoutX="10.0" layoutY="89.0" mnemonicParsing="false" onAction="#newRequestOA" prefHeight="26.0" prefWidth="176.0" text="New Escort Request" />
+                  <Button layoutX="10.0" layoutY="116.0" mnemonicParsing="false" onAction="#violationEntryOA" prefHeight="26.0" prefWidth="176.0" text="Violation Entry" />
+                  <Button layoutX="10.0" layoutY="142.0" mnemonicParsing="false" onAction="#reportAccidentOA" prefHeight="26.0" prefWidth="176.0" text="Report Accident" />
+                  <Button layoutX="10.0" layoutY="168.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Inquiry" />
+                  <Button layoutX="10.0" layoutY="195.0" mnemonicParsing="false" onAction="#lostFoundOA" prefHeight="26.0" prefWidth="176.0" text="Lost and Found Item" />
+                  <Button layoutX="10.0" layoutY="221.0" mnemonicParsing="false" onAction="#logOutOA" prefHeight="26.0" prefWidth="176.0" text="Log Out" />
                </children>
             </VBox>
          </children>
       </AnchorPane>
    </left>
+   <center>
+      <AnchorPane fx:id="PoliceAuthurityAP" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
