--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_3.1_exemption.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_3.1_exemption.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.ExemptionController">
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G_3_1_exemptionFxmlController">
    <children>
       <TableView fx:id="exemptionTableView" layoutX="19.0" layoutY="109.0" prefHeight="200.0" prefWidth="461.0">
         <columns>
