--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_8_VIPmovement.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_8_VIPmovement.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.VIPmovementController">
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G_8_VIPmovementController">
    <children>
       <Button layoutX="44.0" layoutY="241.0" mnemonicParsing="false" onAction="#closeLaneOA" prefHeight="26.0" prefWidth="155.0" style="-fx-background-color: #1877F2;" text="CLose Lane" textFill="WHITE" />
       <Button layoutX="256.0" layoutY="241.0" mnemonicParsing="false" onAction="#OpenLaneOA" prefHeight="26.0" prefWidth="155.0" style="-fx-background-color: #1877F2;" text="Open Lane" textFill="WHITE" />
